--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "babel-polyfill": "6.3.14",
     "babel-runtime": "6.3.19",
+    "classnames": "2.2.5",
     "compression": "1.6.1",
     "cross-env": "1.0.7",
     "ejs": "2.4.1",
