--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "0.14.6",
     "react-dom": "0.14.6",
     "sass": "0.5.0",
+    "underscore": "1.8.3",
     "webpack": "1.12.12"
   },
   "devDependencies": {
