--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "0.14.6",
     "sass": "0.5.0",
     "underscore": "1.8.3",
+    "watchjs": "0.0.0",
     "webpack": "1.12.12"
   },
   "devDependencies": {
